<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">FlashCard</string>
    <string name="main_menu">Main Menu</string>
    <string name="open_cards_button">Open</string>
    <string name="create_cards_button">Create New Cards</string>
    <string name="question">Question</string>
    <string name="answer">Answer</string>
    <string name="previous_button">Previous</string>
	<string name="add_button">Add</string>
	<string name="next_button">Next</string>
	<string name="save_dialog">Create a new set of cards : </string>
	<string name="save_dialog_hint">Enter file name</string>
	<string name="save_button">Save</string>
	<string name="cancel_dialog_button">Cancel</string>
	<string name="new_button">New</string>
	<string name="question_hint">Enter question here.</string>
	<string name="answer_hint">Enter answer here.</string>
	<string name="empty_fields_toast">Please enter a question and answer.</string>
	<string name="empty_database">No previously saved cards.</string>
	<string name="show_answer_button">Show Answer</string>
	<string name="add_card_button">Add</string>
	<string name="delete_file">Delete file</string>
	<string name="saving_empty_database">No cards to save</string>
	<plurals name ="delete_dialog_text">
	    <item quantity="one">Are you sure you want to delete this file?</item>
	    <item quantity="other">Are you sure you want to delete these (%d) files?</item>
	</plurals>
	<string name="yes">Yes</string>
	<string name="no">No</string>
	<string name="add_card_confirmation">Card added</string>
	<string name="card_update_confirmation">Card udpated</string>
	<string name="duplicate_file_name">A file already exists with that name. Please enter a different name.</string>
	<string name="new_cards">New Cards</string>
	<string name="cards_saved">Cards Saved!</string>
	<string name="cards_updated">Cards Updated!</string>
</resources>
