<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:gravity="center"
        android:orientation="vertical" >

        <TextView
            style="?android:listSeparatorTextViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/main_menu" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:orientation="vertical" >

            <Button
                android:id="@+id/open_cards_Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/open_cards_button" />

            <Button
                android:id="@+id/create_cards_Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/create_cards_button" />

        </LinearLayout>
    </LinearLayout>

</ScrollView>